err/gocept.linkchecker.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gocept'...
Listing './lib/python3.5/site-packages/gocept/linkchecker'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/Extensions'...
Compiling './lib/python3.5/site-packages/gocept/linkchecker/database.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/database.py", line 166
    raise Unauthorized, \
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gocept/linkchecker/doc'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/doc/features'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/locales'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/locales/de'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/profiles'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/profiles/default'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/profiles/uninstall'...
Compiling './lib/python3.5/site-packages/gocept/linkchecker/retrievemanager.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/retrievemanager.py", line 70
    raise Unauthorized, "You can't update links for this object."
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gocept/linkchecker/scripts'...
Compiling './lib/python3.5/site-packages/gocept/linkchecker/scripts/crawl-site.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/scripts/crawl-site.py", line 13
    print "Logging in as %s" % sys.argv[2]
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gocept/linkchecker/skins'...
Listing './lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker'...
Compiling './lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/lc_configlet_types.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/lc_configlet_types.py", line 8
    return types
               ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/lc_generateJScript.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/lc_generateJScript.py", line 19
    return jscript
                 ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/lc_getBrokenLinksInContext.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/lc_getBrokenLinksInContext.py", line 5
    return links
               ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/lc_linksToMe.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/lc_linksToMe.py", line 8
    return []
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/portal_linkchecker_uid.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/skins/linkchecker/portal_linkchecker_uid.py", line 1
    return context.portal_linkchecker.getUIDForObject(context)
                                                             ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/gocept/linkchecker/tests'...
Compiling './lib/python3.5/site-packages/gocept/linkchecker/tests/test_normalizer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (test_normalizer.py, line 22)
Compiling './lib/python3.5/site-packages/gocept/linkchecker/utils.py'...
***   File "./lib/python3.5/site-packages/gocept/linkchecker/utils.py", line 129
    except SGMLParseError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gocept/linkchecker/www'...
Listing './lib/python3.5/site-packages/gocept.linkchecker-3.0a9.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
